@@ -7,22 +7,28 @@
     <version>2.3.0</version>
   </parent>
 
-  <artifactId>tfhe-java</artifactId>
+  <artifactId>tfhe-java-parent</artifactId>
   <version>0.17.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
   <name>TFHE Java</name>
   <description>TFHE encryption scheme for Java</description>
   <url>https://github.com/rdlopes/tfhe-java</url>
 
+  <modules>
+    <module>tfhe-java</module>
+    <module>examples</module>
+  </modules>
+
   <scm>
-    <connection>scm:git:https://github.com/rdlopes/${project.artifactId}.git</connection>
-    <developerConnection>scm:git:https://github.com/rdlopes/${project.artifactId}.git</developerConnection>
+    <connection>scm:git:https://github.com/rdlopes/tfhe-java.git</connection>
+    <developerConnection>scm:git:https://github.com/rdlopes/tfhe-java.git</developerConnection>
     <tag>HEAD</tag>
-    <url>https://github.com/rdlopes/${project.artifactId}</url>
+    <url>https://github.com/rdlopes/tfhe-java</url>
   </scm>
 
   <properties>
-    <!-- Project properties -->
-    <native.basedir>${project.basedir}/.native</native.basedir>
+    <!-- Native build paths (resolved relative to reactor root) -->
+    <native.basedir>${maven.multiModuleProjectDirectory}/.native</native.basedir>
     <native-libs.basedir>${native.basedir}/libs</native-libs.basedir>
     <native-bindings.basedir>${native.basedir}/bindings</native-bindings.basedir>
     <native-libs.output.directory>${project.build.outputDirectory}/native</native-libs.output.directory>
@@ -33,246 +39,213 @@
     <rust-backtrace>0</rust-backtrace>
     <!--suppress XmlUnresolvedReference -->
     <java.library.path>${native-libs.basedir}/${os.detected.name}/${os.detected.arch}</java.library.path>
-    <!-- Plugin dependencies-->
+    <!-- Plugin versions -->
     <os-maven-plugin.version>1.7.1</os-maven-plugin.version>
     <sonar-maven-plugin.version>5.7.0.6970</sonar-maven-plugin.version>
+    <!-- Sonar configuration -->
     <sonar.organization>rdlopes</sonar.organization>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-    <sonar.exclusions>**/ffm/**/*,**/target/generated-sources/**/*,**/generated-sources/**/*,**/showcase/**/*,**/types/extended/**/*,**/values/extended/**/*,**/build/**/*</sonar.exclusions>
-    <sonar.cpd.exclusions>**/ffm/**/*,**/target/generated-sources/**/*,**/generated-sources/**/*,**/showcase/**/*,**/types/extended/**/*,**/values/extended/**/*,**/build/**/*</sonar.cpd.exclusions>
+    <sonar.projectKey>io.github.rdlopes:tfhe-java</sonar.projectKey>
+    <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
+    <sonar.scm.disabled>true</sonar.scm.disabled>
+    <sonar.exclusions>**/ffm/**/*,**/target/generated-sources/**/*,**/generated-sources/**/*,**/types/extended/**/*,**/values/extended/**/*,**/build/**/*</sonar.exclusions>
+    <sonar.cpd.exclusions>**/ffm/**/*,**/target/generated-sources/**/*,**/generated-sources/**/*,**/types/extended/**/*,**/values/extended/**/*,**/build/**/*</sonar.cpd.exclusions>
     <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
     <sonar.qualitygate.wait>true</sonar.qualitygate.wait>
+    <!-- Dependency versions not managed by maven-root-pom BOMs -->
+    <commons-io.version>2.22.0</commons-io.version>
+    <!-- JMH version -->
+    <jmh.version>1.37</jmh.version>
   </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.jspecify</groupId>
-      <artifactId>jspecify</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>2.22.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.platform</groupId>
-      <artifactId>junit-platform-suite</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.cucumber</groupId>
-      <artifactId>cucumber-java</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.cucumber</groupId>
-      <artifactId>cucumber-picocontainer</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.cucumber</groupId>
-      <artifactId>cucumber-junit-platform-engine</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openjdk.jmh</groupId>
-      <artifactId>jmh-core</artifactId>
-      <version>1.37</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.openjdk.jmh</groupId>
-      <artifactId>jmh-generator-annprocess</artifactId>
-      <version>1.37</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+  <dependencyManagement>
+    <dependencies>
+      <!-- commons-io: absent from all grand-parent BOMs (assertj-bom, cucumber-bom, junit-bom, spring-boot-dependencies) -->
+      <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>${commons-io.version}</version>
+      </dependency>
+      <!-- Core module self-reference -->
+      <dependency>
+        <groupId>io.github.rdlopes</groupId>
+        <artifactId>tfhe-java</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <!-- JMH: absent from all grand-parent BOMs -->
+      <dependency>
+        <groupId>org.openjdk.jmh</groupId>
+        <artifactId>jmh-core</artifactId>
+        <version>${jmh.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.openjdk.jmh</groupId>
+        <artifactId>jmh-generator-annprocess</artifactId>
+        <version>${jmh.version}</version>
+        <scope>test</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <build>
-    <plugins>
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <configuration>
-          <excludes>
-            <exclude>io/github/rdlopes/tfhe/ffm/**/*</exclude>
-            <exclude>io/github/rdlopes/tfhe/showcase/**/*</exclude>
-            <exclude>**/types/extended/**/*</exclude>
-            <exclude>**/values/extended/**/*</exclude>
-          </excludes>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <environmentVariables>
-            <RUST_BACKTRACE>${rust-backtrace}</RUST_BACKTRACE>
-          </environmentVariables>
-          <argLine>@{surefireArgLine} -XX:+EnableDynamicAgentLoading -Xshare:off --enable-preview --enable-native-access=ALL-UNNAMED -Djava.library.path=${java.library.path}</argLine>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <configuration>
-          <environmentVariables>
-            <RUST_BACKTRACE>${rust-backtrace}</RUST_BACKTRACE>
-          </environmentVariables>
-          <argLine>@{failsafeArgLine} -XX:+EnableDynamicAgentLoading -Xshare:off --enable-preview --enable-native-access=ALL-UNNAMED -Djava.library.path=${java.library.path}</argLine>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.sonarsource.scanner.maven</groupId>
-        <artifactId>sonar-maven-plugin</artifactId>
-        <version>${sonar-maven-plugin.version}</version>
-        <executions>
-          <execution>
-            <id>sonar-analysis</id>
-            <goals>
-              <goal>sonar</goal>
-            </goals>
-            <phase>verify</phase>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>com.github.cukedoctor</groupId>
-        <artifactId>cukedoctor-maven-plugin</artifactId>
-        <configuration>
-          <documentTitle>TFHE for Java</documentTitle>
-          <introChapterDir>${project.build.testOutputDirectory}</introChapterDir>
-          <disableTheme>true</disableTheme>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-resources-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>copy-native-bindings</id>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <phase>generate-sources</phase>
-            <configuration>
-              <outputDirectory>${native-bindings.output.directory}</outputDirectory>
-              <resources>
-                <resource>
-                  <directory>${native-bindings.basedir}</directory>
-                  <includes>
-                    <include>**/*.java</include>
-                  </includes>
-                </resource>
-              </resources>
-            </configuration>
-          </execution>
-          <execution>
-            <id>copy-native-libs</id>
-            <goals>
-              <goal>copy-resources</goal>
-            </goals>
-            <phase>generate-resources</phase>
-            <configuration>
-              <outputDirectory>${native-libs.output.directory}</outputDirectory>
-              <resources>
-                <resource>
-                  <directory>${native-libs.basedir}</directory>
-                  <includes>
-                    <include>LICENSE</include>
-                    <include>**/*.h</include>
-                    <include>**/*.dylib</include>
-                    <include>**/*.so</include>
-                    <include>**/*.dll</include>
-                  </includes>
-                </resource>
-              </resources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>add-generated-classes</id>
-            <goals>
-              <goal>add-source</goal>
-            </goals>
-            <phase>process-resources</phase>
-            <configuration>
-              <sources>
-                <source>${native-bindings.output.directory}</source>
-                <source>${generated.output.directory}/tfhe-java</source>
-              </sources>
-            </configuration>
-          </execution>
-          <execution>
-            <id>add-generated-test-classes</id>
-            <goals>
-              <goal>add-test-source</goal>
-            </goals>
-            <phase>process-resources</phase>
-            <configuration>
-              <sources>
-                <source>${generated.test.output.directory}/tfhe-java</source>
-              </sources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <compilerArgs>--enable-preview</compilerArgs>
-          <annotationProcessorPaths>
-            <path>
-              <groupId>org.openjdk.jmh</groupId>
-              <artifactId>jmh-generator-annprocess</artifactId>
-              <version>1.37</version>
-            </path>
-          </annotationProcessorPaths>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <excludePackageNames>io.github.rdlopes.tfhe.ffm</excludePackageNames>
-          <doclint>none</doclint>
-        </configuration>
-      </plugin>
-    </plugins>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <configuration>
+            <excludes>
+              <exclude>io/github/rdlopes/tfhe/ffm/**/*</exclude>
+              <exclude>**/types/extended/**/*</exclude>
+              <exclude>**/values/extended/**/*</exclude>
+            </excludes>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <environmentVariables>
+              <RUST_BACKTRACE>${rust-backtrace}</RUST_BACKTRACE>
+            </environmentVariables>
+            <argLine>@{surefireArgLine} -Djava.library.path=${java.library.path}</argLine>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <configuration>
+            <environmentVariables>
+              <RUST_BACKTRACE>${rust-backtrace}</RUST_BACKTRACE>
+            </environmentVariables>
+            <argLine>@{failsafeArgLine} -Djava.library.path=${java.library.path}</argLine>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.sonarsource.scanner.maven</groupId>
+          <artifactId>sonar-maven-plugin</artifactId>
+          <version>${sonar-maven-plugin.version}</version>
+          <executions>
+            <execution>
+              <id>sonar-analysis</id>
+              <goals>
+                <goal>sonar</goal>
+              </goals>
+              <phase>verify</phase>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>com.github.cukedoctor</groupId>
+          <artifactId>cukedoctor-maven-plugin</artifactId>
+          <configuration>
+            <documentTitle>TFHE for Java</documentTitle>
+            <introChapterDir>${project.build.testOutputDirectory}</introChapterDir>
+            <disableTheme>true</disableTheme>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <executions>
+            <execution>
+              <id>copy-native-bindings</id>
+              <goals>
+                <goal>copy-resources</goal>
+              </goals>
+              <phase>generate-sources</phase>
+              <configuration>
+                <outputDirectory>${native-bindings.output.directory}</outputDirectory>
+                <resources>
+                  <resource>
+                    <directory>${native-bindings.basedir}</directory>
+                    <includes>
+                      <include>**/*.java</include>
+                    </includes>
+                  </resource>
+                </resources>
+              </configuration>
+            </execution>
+            <execution>
+              <id>copy-native-libs</id>
+              <goals>
+                <goal>copy-resources</goal>
+              </goals>
+              <phase>generate-resources</phase>
+              <configuration>
+                <outputDirectory>${native-libs.output.directory}</outputDirectory>
+                <resources>
+                  <resource>
+                    <directory>${native-libs.basedir}</directory>
+                    <includes>
+                      <include>LICENSE</include>
+                      <include>**/*.h</include>
+                      <include>**/*.dylib</include>
+                      <include>**/*.so</include>
+                      <include>**/*.dll</include>
+                    </includes>
+                  </resource>
+                </resources>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>build-helper-maven-plugin</artifactId>
+          <executions>
+            <execution>
+              <id>add-generated-classes</id>
+              <goals>
+                <goal>add-source</goal>
+              </goals>
+              <phase>process-resources</phase>
+              <configuration>
+                <sources>
+                  <source>${native-bindings.output.directory}</source>
+                  <source>${generated.output.directory}/tfhe-java</source>
+                </sources>
+              </configuration>
+            </execution>
+            <execution>
+              <id>add-generated-test-classes</id>
+              <goals>
+                <goal>add-test-source</goal>
+              </goals>
+              <phase>process-resources</phase>
+              <configuration>
+                <sources>
+                  <source>${generated.test.output.directory}/tfhe-java</source>
+                </sources>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <configuration>
+            <compilerArgs>--enable-preview</compilerArgs>
+            <annotationProcessorPaths>
+              <path>
+                <groupId>org.openjdk.jmh</groupId>
+                <artifactId>jmh-generator-annprocess</artifactId>
+                <version>${jmh.version}</version>
+              </path>
+            </annotationProcessorPaths>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <configuration>
+            <excludePackageNames>io.github.rdlopes.tfhe.ffm</excludePackageNames>
+            <doclint>none</doclint>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <extensions>
       <extension>
         <groupId>kr.motd.maven</groupId>
@@ -299,25 +272,6 @@
                 </fileset>
               </filesets>
             </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>run-build-script</id>
-                <goals>
-                  <goal>exec</goal>
-                </goals>
-                <phase>initialize</phase>
-                <configuration>
-                  <executable>java</executable>
-                  <arguments>
-                    <argument>src/main/java/io/github/rdlopes/tfhe/build/BuildNative.java</argument>
-                  </arguments>
-                </configuration>
-              </execution>
-            </executions>
           </plugin>
         </plugins>
       </build>
